[project]
name = "bibdata_harvest"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Jon Stroop", email = "jsgh@jopast.io"},
]
dependencies = ["requests>=2.32.4"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
