[project]
name = "bibdata_harvest"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Jon Stroop", email = "jsgh@jopast.io"},
]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}

dependencies = ["requests>=2.32.4"]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
]

[tool.pdm]
distribution = false

[tool.black]
line-length = 100
preview = true
quiet = true
skip-magic-trailing-comma = true

[tool.isort]
profile = "black"
multi_line_output = 3
force_single_line = true
force_sort_within_sections = true
quiet = true
known_first_party = ["marc_pd_tool"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
import_heading_stdlib = "Standard library imports"
import_heading_thirdparty = "Third party imports"
import_heading_firstparty = "Local imports"
import_heading_localfolder = "Local folder imports"

[tool.pdm.scripts]
black = { cmd = "black ." }
isort = { cmd = "isort ." }
clean = { shell = '''
    find . \
        -name "__pycache__" \
        -o -name ".DS_Store" \
        | xargs rm -r
'''}
format = { composite = [ "black", "isort", "clean" ] }